Fix code embeds if too large

--- a/style/chat.css
+++ b/style/chat.css
@@ -65,6 +65,7 @@ pre.chat-message-text {
     border-radius: 20px;
     font-size: 12pt;
     overflow-y: auto;
+    scrollbar-width: auto;
     word-break: break-all;
 }
 
